add changes to scrip generator and content

--- a/index.html
+++ b/index.html
@@ -469,7 +469,35 @@ aws ec2 describe-security-groups | jq .
 aws ec2 describe-dhcp-options | jq .
 aws ec2 describe-tags | jq .
 
-set | grep aws</code></pre>
+set | grep aws_</code></pre>
+</section>
+<section class="slide level1">
+
+<h3 id="lets-try-to-script-it">Let's try to script it</h3>
+<ul>
+<li>Gather env var from our aws account</li>
+</ul>
+<pre><code>cat env.sh
+
+. ./env.sh</code></pre>
+</section>
+<section class="slide level1">
+
+<h3 id="build-complete-infrastructure-building-script">Build complete infrastructure building script</h3>
+<ul>
+<li>Let's make a builder script</li>
+</ul>
+<pre><code>less create_env.sh
+
+./create_env.sh</code></pre>
+</section>
+<section class="slide level1">
+
+<h3 id="questions">Questions ?</h3>
+<ul>
+<li></li>
+</ul>
+<pre><code></code></pre>
 </section>
 <section class="slide level1">
 
@@ -498,30 +526,6 @@ set | grep aws</code></pre>
 <section class="slide level1">
 
 <h3 id="section-4"></h3>
-<ul>
-<li></li>
-</ul>
-<pre><code></code></pre>
-</section>
-<section class="slide level1">
-
-<h3 id="section-5"></h3>
-<ul>
-<li></li>
-</ul>
-<pre><code></code></pre>
-</section>
-<section class="slide level1">
-
-<h3 id="section-6"></h3>
-<ul>
-<li></li>
-</ul>
-<pre><code></code></pre>
-</section>
-<section class="slide level1">
-
-<h3 id="section-7"></h3>
 <ul>
 <li></li>
 </ul>
