--- a/index.html
+++ b/index.html
@@ -39,12 +39,15 @@
 
 <section class="slide level1">
 
+<p>% navigate using &lt; &gt;</p>
+</section>
+<section class="slide level1">
+
 <h3 id="about-me">About me</h3>
 <ul>
 <li>SCB CDO Foundation Services DevOps Lead,</li>
 <li>Economist by training</li>
 <li>AWS Certified</li>
-<li>Leading EDMI, eOps, RPA and few other DevOps Teams</li>
 </ul>
 </section>
 <section class="slide level1">
@@ -54,8 +57,6 @@
 <li>This Crash Course is NOT 100% tested !</li>
 <li>There might be mistakes (Feedback is Welcome)</li>
 <li>There might be missing or incomplete information</li>
-<li>Presentation available online at <a href="">awscli.mudrii.com</a></li>
-<li>Sources of this presentation available on <a href="https://github.com/mudrii/awscli.git" class="uri">https://github.com/mudrii/awscli.git</a></li>
 </ul>
 </section>
 <section class="slide level1">
