--- a/index.html
+++ b/index.html
@@ -39,13 +39,9 @@
 
 <section class="slide level1">
 
-<p>% navigate using &lt; &gt;</p>
-</section>
-<section class="slide level1">
-
 <h3 id="about-me">About me</h3>
 <ul>
-<li>SCB CDO Foundation Services DevOps Lead,</li>
+<li>SCB CDO DevOps Lead,</li>
 <li>Economist by training</li>
 <li>AWS Certified</li>
 </ul>
@@ -224,24 +220,6 @@ aws ec2 describe-regions --filters &quot;Name=endpoint,Values=*ap*&quot; \
 
 <h3 id="demo-2">Demo:</h3>
 <ul>
-<li>Check on available resource</li>
-</ul>
-<pre><code>aws ec2 describe-availability-zones
-
-aws ec2 describe-vpcs
-
-aws ec2 describe-vpcs --region us-east-2
-
-aws ec2 describe-dhcp-options
-
-aws ec2 describe-subnets
-
-aws ec2 describe-subnets --region us-east-2</code></pre>
-</section>
-<section class="slide level1">
-
-<h3 id="demo-3">Demo:</h3>
-<ul>
 <li>Create our 1st VPC</li>
 </ul>
 <pre><code>aws ec2 create-vpc --cidr-block 172.30.0.0/16
@@ -256,7 +234,7 @@ aws ec2 modify-vpc-attribute --vpc-id vpc-idxxxx \
 </section>
 <section class="slide level1">
 
-<h3 id="demo-4">Demo:</h3>
+<h3 id="demo-3">Demo:</h3>
 <ul>
 <li>Associate DHCP to VPC</li>
 </ul>
@@ -270,29 +248,7 @@ aws ec2 create-tags --resources vpc-idxxxx dopt-idxxxx \
 </section>
 <section class="slide level1">
 
-<h3 id="demo-5">Demo:</h3>
-<ul>
-<li>Create Subnets for VPC</li>
-</ul>
-<pre><code>aws ec2 describe-subnets
-
-ec2 create-subnet --vpc-id vpc-idxxxx --cidr-block 172.30.0.0/24 \
---availability-zone ap-southeast-1a
-
-ec2 create-subnet --vpc-id vpc-idxxxx --cidr-block 172.30.1.0/24 \
---availability-zone ap-southeast-1b
-
-aws ec2 describe-subnets
-
-ec2 modify-subnet-attribute --subnet-id subnet-idxxaxa \
---map-public-ip-on-launch
-
-ec2 modify-subnet-attribute --subnet-id subnet-idxxxxb \
---map-public-ip-on-launch</code></pre>
-</section>
-<section class="slide level1">
-
-<h3 id="demo-6">Demo:</h3>
+<h3 id="demo-4">Demo:</h3>
 <ul>
 <li>Copy/Paste is not an option, try in programmatic way as var</li>
 </ul>
@@ -308,7 +264,7 @@ aws ec2 create-vpc --cidr-block 172.30.0.0/16 \
 </section>
 <section class="slide level1">
 
-<h3 id="demo-7">Demo:</h3>
+<h3 id="demo-5">Demo:</h3>
 <ul>
 <li>Let's try and create VPC and pass VpcId as Shell VAR</li>
 </ul>
@@ -327,7 +283,7 @@ aws ec2 describe-vpcs | jq .</code></pre>
 </section>
 <section class="slide level1">
 
-<h3 id="demo-8">Demo:</h3>
+<h3 id="demo-6">Demo:</h3>
 <ul>
 <li>Create Subnets</li>
 </ul>
@@ -351,7 +307,7 @@ aws ec2 modify-subnet-attribute --subnet-id $aws_subn_2 \
 </section>
 <section class="slide level1">
 
-<h3 id="demo-9">Demo:</h3>
+<h3 id="demo-7">Demo:</h3>
 <ul>
 <li>Route Table Subnet association</li>
 </ul>
@@ -366,7 +322,7 @@ $aws_rout_tbl --subnet-id $aws_subn_2 | jq .AssociationId -r)</code></pre>
 </section>
 <section class="slide level1">
 
-<h3 id="demo-10">Demo:</h3>
+<h3 id="demo-8">Demo:</h3>
 <ul>
 <li>Internet Gateway and internet route</li>
 </ul>
@@ -382,7 +338,7 @@ aws ec2 create-route --route-table-id $aws_rout_tbl \
 </section>
 <section class="slide level1">
 
-<h3 id="demo-11">Demo:</h3>
+<h3 id="demo-9">Demo:</h3>
 <ul>
 <li>Let's create some securely Groups</li>
 </ul>
@@ -408,16 +364,16 @@ aws_sec_elb=$(aws ec2 create-security-group --group-name elb \
 </section>
 <section class="slide level1">
 
-<h3 id="demo-12">Demo:</h3>
+<h3 id="demo-10">Demo:</h3>
 <ul>
 <li>Add access permissions to security Groups</li>
 </ul>
-<pre><code>ec2 authorize-security-group-ingress --group-id sg-xxxxxxx  \
+<pre><code>ec2 authorize-security-group-ingress --group-id $aws_sec_cicd  \
 --protocol tcp --port 22 --cidr 0.0.0.0/0</code></pre>
 </section>
 <section class="slide level1">
 
-<h3 id="demo-13">Demo:</h3>
+<h3 id="demo-11">Demo:</h3>
 <ul>
 <li><p>Add Ports to cicd group</p>
 <pre><code>aws ec2 authorize-security-group-ingress --group-id $aws_sec_cicd --ip-permissions \
@@ -432,7 +388,7 @@ aws_sec_elb=$(aws ec2 create-security-group --group-name elb \
 </section>
 <section class="slide level1">
 
-<h3 id="demo-14">Demo:</h3>
+<h3 id="demo-12">Demo:</h3>
 <ul>
 <li><p>Add Ports to rds group</p>
 <pre><code>aws ec2 authorize-security-group-ingress --group-id $aws_sec_rds --ip-permissions \
@@ -444,7 +400,7 @@ aws_sec_elb=$(aws ec2 create-security-group --group-name elb \
 </section>
 <section class="slide level1">
 
-<h3 id="demo-15">Demo:</h3>
+<h3 id="demo-13">Demo:</h3>
 <ul>
 <li>Assigning tags to AWS resources</li>
 </ul>
